; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/qla2xxx/extr_qla_os.c_qla83xx_set_drv_presence.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/qla2xxx/extr_qla_os.c_qla83xx_set_drv_presence.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@QLA_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @qla83xx_set_drv_presence(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32, i32* @QLA_SUCCESS, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @qla83xx_idc_lock(i32* %5, i32 0)
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @__qla83xx_set_drv_presence(i32* %7)
  store i32 %8, i32* %3, align 4
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @qla83xx_idc_unlock(i32* %9, i32 0)
  %11 = load i32, i32* %3, align 4
  ret i32 %11
}

declare dso_local i32 @qla83xx_idc_lock(i32*, i32) #1

declare dso_local i32 @__qla83xx_set_drv_presence(i32*) #1

declare dso_local i32 @qla83xx_idc_unlock(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
